JDK-6679854 : assert in escape.cpp:397
  • Type: Bug
  • Component: hotspot
  • Sub-Component: compiler
  • Affected Version: hs12
  • Priority: P4
  • Status: Closed
  • Resolution: Fixed
  • OS: solaris_10
  • CPU: x86
  • Submitted: 2008-03-25
  • Updated: 2011-04-20
  • Resolved: 2011-04-20
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 6 Other
6u14Fixed hs12Fixed
Description
java -XX:+PrintCompilation -XX:+DoEscapeAnalysis -XX:+AggressiveOpts -jar SPECjvm2008.jar scimark.monte_carlo

# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc:  SuppressErrorAt=/escape.cpp:397
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt-jprtadm/temp/P2/B/182328.rasbold/source/src/share/vm/opto/escape.cpp:397), pid=24790, tid=15
#  Error: assert(base->Opcode() == Op_ConP || base->Opcode() == Op_ThreadLocal || base->is_Mem() && base->bottom_type() == TypeRawPtr::NOTNULL || base->is_Proj() && base->in(0)->is_Allocate(),"sanity")
#
# Java VM: OpenJDK 64-Bit Server VM (12.0-b02-2008-03-21-182328.rasbold.hs-merge-fastdebug mixed mode solaris-amd64)
# An error report file with more information is saved as:
# /export/home/kvn/SPECjvm2008/hs_err_pid24790.log
#
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#

Comments
EVALUATION The assert misses the case CastX2P base for an unsafe field reference.
25-03-2008