6679854: assert in escape.cpp:397

The assert misses the case CastX2P 'base' for an unsafe field reference

Reviewed-by: never, jrose